FEAT:Assignment submitted

--- a/Assignments/Assignment-3 - Copy/index.html
+++ b/Assignments/Assignment-3 - Copy/index.html
@@ -7,19 +7,16 @@
     <title>Document</title>
 
     <script src="./app.js"></script>
-    <!--alert in head section-->
-    <!--<script>alert("hi")</script>-->
+    
     
 </head>
 <body>
 
-<!--alert in befor body section-->
-<!--<script>alert("hi")</script>-->    
-Assignment -1 
-<!--<h4>Alert</h>-->
    
-</body>
-<!--alert after body section-->
-<!--<script>alert("hi")</script>-->
-</html>
+Assignment -3
+<!--<h5>My birth year is 1990</h5><br>
+<h5>Date type of my ddcelared variable is number</h5>-->
 
+
+</body>
+</html>
